ci: install openssl headers on rocky

--- a/.github/workflows/rocky-linux-build.yml
+++ b/.github/workflows/rocky-linux-build.yml
@@ -43,6 +43,7 @@ jobs:
             git \
             make \
             pkgconfig \
+            openssl-devel \
             sqlite \
             sqlite-devel \
             tar \
