ci(workflows): fix escaping in rocky-linux-build.yml
Use consistent backslash escaping in dnf install commands to prevent potential shell interpretation issues

--- a/.github/workflows/rocky-linux-build.yml
+++ b/.github/workflows/rocky-linux-build.yml
@@ -49,23 +49,23 @@ jobs:
 
           # Install build tools and dependencies step by step to avoid conflicts
           # Install base development tools
-          dnf -y install \\
-            ca-certificates \\
-            curl \\
-            git \\
-            gcc \\
-            gcc-c++ \\
-            make \\
-            pkgconf-pkg-config \\
-            tar \\
-            xz \\
+          dnf -y install \
+            ca-certificates \
+            curl \
+            git \
+            gcc \
+            gcc-c++ \
+            make \
+            pkgconf-pkg-config \
+            tar \
+            xz \
             which
 
           # Install development libraries
-          dnf -y install \\
-            openssl-devel \\
-            sqlite \\
-            sqlite-devel \\
+          dnf -y install \
+            openssl-devel \
+            sqlite \
+            sqlite-devel \
             zlib-devel
 
           # Install dnf plugins if needed
