feat(update): add auto-update functionality for unix systems
- Implement GitHub release checking and binary update mechanism
- Add configuration options for auto-update behavior
- Include admin notifications for update status
- Add resilience watchdog for network failures
- Extend directories and config structures to support updates

--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,14 @@ RESTART_CRONS=0 0 0 * * *;0 0 12 * * *
 # Runtime environment
 # Rust 프로세스 내부에서 사용하는 환경 태그. 현재 코드에서는 informational logging에만 사용.
 NODE_ENV=production
+
+# Auto update (optional)
+# GitHub release를 주기적으로 확인해 최신 바이너리를 자동 적용하려면 true.
+AUTO_UPDATE_ENABLED=false
+# 프로세스 시작 시 즉시 업데이트 체크를 수행할지 여부.
+AUTO_UPDATE_CHECK_ON_STARTUP=true
+# 새 바이너리를 설치한 뒤 즉시 재시작(exec)할지 여부.
+AUTO_UPDATE_AUTO_RESTART=true
+# 릴리스가 호스팅된 GitHub 저장소 (owner / repo). 기본값은 본 프로젝트 origin.
+AUTO_UPDATE_REPO_OWNER=yldst-dev
+AUTO_UPDATE_REPO_NAME=fuckyou-spam-rs
