--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ tokio-cron-scheduler = "0.10.0"
 teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
 sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
 dom_smoothie = "0.13"
+semver = "1.0"
+flate2 = "1.0"
+tar = "0.4"
+tempfile = "3.10"
