--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,30 +5,30 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0"
-thiserror = "1.0"
-dotenvy = "0.15"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
-tracing-appender = "0.2"
-chrono = { version = "0.4", features = ["serde", "clock"] }
-chrono-tz = "0.10"
-regex = "1.11"
-url = "2.5"
-once_cell = "1.19"
-parking_lot = "0.12"
-futures = "0.3"
-reqwest = { version = "0.12.9", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
-tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
-tokio-cron-scheduler = "0.10.0"
-teloxide = { version = "0.17.0", features = ["macros", "ctrlc_handler"] }
+thiserror = "2.0"
+dotenvy = "0.15.7"
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.145"
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }
+tracing-appender = "0.2.3"
+chrono = { version = "0.4.42", features = ["serde", "clock"] }
+chrono-tz = "0.10.4"
+regex = "1.12.2"
+url = "2.5.7"
+once_cell = "1.21.3"
+parking_lot = "0.12.5"
+futures = "0.3.31"
+reqwest = { version = "0.12.24", default-features = false, features = ["json", "stream", "gzip", "brotli", "deflate", "rustls-tls"] }
+tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
+tokio-cron-scheduler = "0.10.2"
+teloxide = { version = "0.17.0", default-features = false, features = ["macros", "ctrlc_handler", "rustls"] }
 sqlx = { version = "0.8.3", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
 dom_smoothie = "0.13"
 semver = "1.0"
-flate2 = "1.0"
-tar = "0.4"
-tempfile = "3.10"
+flate2 = "1.1.5"
+tar = "0.4.44"
+tempfile = "3.23.0"
 fs2 = "0.4"
-sysinfo = "0.30"
-libc = "0.2"
+sysinfo = "0.30.13"
+libc = "0.2.177"
